Use Byte.valueOf rather than new Byte etc