@@ -48,7 +48,7 @@ public class ByteTest extends AbstractNumberTest {
     public void testByteMin() throws ValidatorException {
         // Create bean to run test on.
         ValueBean info = new ValueBean();
-        info.setValue(new Byte(Byte.MIN_VALUE).toString());
+        info.setValue(Byte.valueOf(Byte.MIN_VALUE).toString());
 
         valueTest(info, true);
     }
@@ -59,7 +59,7 @@ public class ByteTest extends AbstractNumberTest {
     public void testByteMax() throws ValidatorException {
         // Create bean to run test on.
         ValueBean info = new ValueBean();
-        info.setValue(new Byte(Byte.MAX_VALUE).toString());
+        info.setValue(Byte.valueOf(Byte.MAX_VALUE).toString());
 
         valueTest(info, true);
     }
